--- a/src/assets/css/fonts.scss
+++ b/src/assets/css/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'HouschkaPro';
-  src: url("./assets/fonts/HouschkaPro-Medium.woff") format('woff2'),
-  url("./assets/fonts/HouschkaPro-Medium.woff") format('woff');
+  src: url("~@/assets/fonts/HouschkaPro-Medium.woff") format('woff2'),
+  url("~@/assets/fonts/HouschkaPro-Medium.woff") format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'HouschkaPro';
-  src: url("./assets/fonts/HouschkaPro-DemiBold.woff2") format('woff2'),
-  url("./assets/fonts/HouschkaPro-DemiBold.woff") format('woff');
+  src: url("~@/assets/fonts/HouschkaPro-DemiBold.woff2") format('woff2'),
+  url("~@/assets/fonts/HouschkaPro-DemiBold.woff") format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: 'HouschkaPro';
-  src: url("./assets/fonts/HouschkaPro-Bold.woff2") format('woff2'),
-  url("./assets/fonts/HouschkaPro-Bold.woff") format('woff');
+  src: url("~@/assets/fonts/HouschkaPro-Bold.woff2") format('woff2'),
+  url("~@/assets/fonts/HouschkaPro-Bold.woff") format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
