--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background-color: #eaeaea;
+  background-color: #fff;
   font-family: 'HouschkaPro', Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
