--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -2,3 +2,23 @@
 @import "./fonts";
 @import "./base";
 @import "./variables";
+
+@import "./blocks/header";
+@import "./blocks/footer";
+@import "./blocks/content";
+@import "./blocks/welcome-screen";
+@import "./blocks/swiper";
+@import "./blocks/about";
+@import "./blocks/person-card";
+@import "./blocks/advantages";
+@import "./blocks/advantage";
+@import "./blocks/products";
+@import "./blocks/product-card";
+@import "./blocks/contacts";
+@import "./blocks/products-page";
+@import "./blocks/price-list";
+@import "./blocks/logistics-page";
+@import "./blocks/documents";
+@import "./blocks/document";
+@import "./blocks/dealers";
+@import "./blocks/contacts-page";
