format unused data

--- a/src/assets/css/blocks/dealers.scss
+++ b/src/assets/css/blocks/dealers.scss
@@ -24,8 +24,7 @@
 }
 
 .dealers__text-box {
-  width: calc(100% - 370px);
-  margin-right: 100px;
+  width: 100%;
 
   p {
     font-family: $font-family-base;
