add Callback form popup

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "./fonts";
 @import "./base";
 @import "./variables";
+@import "./transitions";
 
 @import "./blocks/header";
 @import "./blocks/footer";
@@ -22,3 +23,4 @@
 @import "./blocks/document";
 @import "./blocks/dealers";
 @import "./blocks/contacts-page";
+@import "./blocks/callback-popup";
