--- a/srv/templates/mail.ejs
+++ b/srv/templates/mail.ejs
@@ -1,7 +1,7 @@
 <div style="max-width: 580px; width: 100%;">
   <div style="padding: 20px; background-color: #FFCB53;">
     <h1 style="font-family: Arial, sans-serif; color: #2F2F2F; font-size: 24px; text-align: center; margin: 0;">
-      Заявка с сайта Агровиза
+      Заявка на обратную связь
     </h1>
   </div>
   <div style="padding: 30px 0;">
