--- a/src/assets/scss/blocks/contacts-page.scss
+++ b/src/assets/scss/blocks/contacts-page.scss
@@ -23,12 +23,57 @@
 }
 
 .contacts-page__description {
-  font-family: $font-family-base;
-  font-weight: $medium;
-  font-size: 18px;
-  color: $text-color;
   margin: 0 0 80px;
   max-width: 830px;
+
+  p {
+    font-family: $font-family-base;
+    font-weight: $medium;
+    font-size: 18px;
+    color: $text-color;
+    margin: 0 0 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  h2, h3, h4, h5, h6 {
+    font-family: $font-family-base;
+    font-weight: $semibold;
+    font-size: 22px;
+    color: $text-color;
+    margin: 0 0 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  ul, ol {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  li {
+    font-family: $font-family-base;
+    font-weight: $medium;
+    font-size: 18px;
+    color: $text-color;
+    display: list-item;
+    list-style-position: inside;
+  }
+
+  a {
+    font-family: $font-family-base;
+    font-weight: $medium;
+    font-size: 18px;
+    color: $brand-color;
+    border-bottom: 1px solid $brand-color;
+  }
 }
 
 .contacts-page__content-box {
