--- a/src/assets/scss/blocks/logistics-page.scss
+++ b/src/assets/scss/blocks/logistics-page.scss
@@ -35,7 +35,7 @@
     }
   }
 
-  h2, h3 {
+  h2, h3, h4, h5, h6 {
     font-family: $font-family-base;
     font-weight: $semibold;
     font-size: 22px;
