--- a/src/assets/scss/blocks/price-list.scss
+++ b/src/assets/scss/blocks/price-list.scss
@@ -72,15 +72,54 @@
   margin: 0 0 12px;
 }
 
-.price-list__company-description {
-  font-family: $font-family-base;
-  font-size: 16px;
-  font-weight: $semibold;
-  color: $text-color;
-  margin: 0 0 10px;
+.price-list__company-left-box {
+  p {
+    font-family: $font-family-base;
+    font-weight: $medium;
+    font-size: 16px;
+    color: $text-color;
+    margin: 0 0 10px;
 
-  &:last-child {
-    margin-bottom: 0;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  h2, h3, h4, h5, h6 {
+    font-family: $font-family-base;
+    font-weight: $semibold;
+    font-size: 22px;
+    color: $text-color;
+    margin: 0 0 10px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  ul, ol {
+    margin-bottom: 10px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  li {
+    font-family: $font-family-base;
+    font-weight: $medium;
+    font-size: 16px;
+    color: $text-color;
+    display: list-item;
+    list-style-position: inside;
+  }
+
+  a {
+    font-family: $font-family-base;
+    font-weight: $medium;
+    font-size: 16px;
+    color: $brand-color;
+    border-bottom: 1px solid $brand-color;
   }
 }
 
