--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -15,6 +15,10 @@
   justify-content: space-between;
 }
 
+.footer__logo-box {
+  margin-right: 30px;
+}
+
 .footer__text-box {
   max-width: 460px;
   margin-left: auto;
@@ -30,5 +34,35 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+@include screen-sm {
+  .footer__logo-box {
+    width: 180px;
+    flex-shrink: 0;
+  }
+}
+
+@include tablet-md {
+  .footer__logo-box {
+    width: 130px;
+  }
+}
+
+@include tablet-sm {
+  .footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer__logo-box {
+    margin-bottom: 30px;
+    margin-right: 0;
+  }
+
+  .footer__text-box {
+    text-align: center;
+    margin-left: 0;
   }
 }
