--- a/src/assets/scss/blocks/about.scss
+++ b/src/assets/scss/blocks/about.scss
@@ -67,3 +67,40 @@
     background-color: $white;
   }
 }
+
+@include tablet-lg {
+  .about {
+    padding: 80px 0;
+  }
+}
+
+@include tablet-md {
+  .about {
+    padding: 60px 0;
+  }
+
+  .about__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+
+  .about__text-box {
+    p {
+      font-size: 16px;
+    }
+
+    a {
+      font-size: 16px;
+    }
+  }
+}
+
+@include tablet-sm {
+  .about__wrapper {
+    padding: 0 20px;
+  }
+
+  .about {
+    padding: 40px 0;
+  }
+}
