--- a/src/assets/scss/blocks/contacts.scss
+++ b/src/assets/scss/blocks/contacts.scss
@@ -15,7 +15,7 @@
   box-shadow: 0 0 10px rgba(47, 47, 47, 0.15);
   position: absolute;
   top: 50%;
-  right: 0;
+  right: 30px;
   transform: translateY(-50%);
   background-color: $white;
   padding: 25px;
@@ -115,4 +115,51 @@
 
 .contacts__form {
   margin-top: 40px;
+}
+
+@include tablet-lg {
+  .contacts {
+    display: flex;
+    height: auto;
+  }
+
+  .contacts__map {
+    position: static;
+    width: 50%;
+    height: auto;
+  }
+
+  .contacts__form-box {
+    position: static;
+    transform: none;
+    width: 100%;
+    box-shadow: none;
+    border-radius: 0;
+  }
+
+  .contacts__wrapper {
+    padding: 0;
+    width: 50%;
+  }
+}
+
+@include tablet-md {
+  .contacts {
+    flex-direction: column;
+  }
+
+  .contacts__map {
+    width: 100%;
+    height: 300px;
+  }
+
+  .contacts__wrapper {
+    width: 100%;
+  }
+}
+
+@include tablet-sm {
+  .contacts__form-box {
+    padding: 20px;
+  }
 }
