--- a/src/assets/scss/blocks/documents.scss
+++ b/src/assets/scss/blocks/documents.scss
@@ -24,9 +24,44 @@
 
 .documents__list {
   display: grid;
-  grid-template-columns: repeat(5, 190px);
+  grid-template-columns: repeat(auto-fill, 190px);
   justify-content: space-between;
   align-items: start;
   width: 100%;
-  grid-row-gap: 30px;
+  grid-gap: 30px;
+}
+
+@include tablet-lg {
+  .documents {
+    padding: 80px 0;
+  }
+
+  .documents__title {
+    margin-bottom: 40px;
+  }
+}
+
+@include tablet-md {
+  .documents {
+    padding: 60px 0;
+  }
+
+  .documents__title {
+    font-size: 44px;
+  }
+}
+
+@include tablet-sm {
+  .documents_wrapper {
+    padding: 0 20px;
+  }
+
+  .documents {
+    padding: 40px 0;
+  }
+
+  .documents__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
 }
