--- a/src/assets/scss/blocks/logistics-page.scss
+++ b/src/assets/scss/blocks/logistics-page.scss
@@ -72,3 +72,56 @@
     border-bottom: 1px solid $brand-color;
   }
 }
+
+@include tablet-lg {
+  .logistics-page {
+    padding: 80px 0;
+  }
+
+  .logistics-page__title {
+    margin-bottom: 40px;
+  }
+}
+
+@include tablet-md {
+  .logistics-page {
+    padding: 60px 0;
+  }
+
+  .logistics-page__title {
+    font-size: 44px;
+  }
+}
+
+@include tablet-sm {
+  .logistics-page__wrapper {
+    padding: 0 20px;
+  }
+
+  .logistics-page {
+    padding: 40px 0;
+  }
+
+  .logistics-page__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+
+  .logistics-page__description-box {
+    p {
+      font-size: 16px;
+    }
+
+    h2, h3, h4, h5, h6 {
+      font-size: 20px;
+    }
+
+    a {
+      font-size: 16px;
+    }
+
+    li {
+      font-size: 16px;
+    }
+  }
+}
