--- a/src/assets/scss/blocks/price-list.scss
+++ b/src/assets/scss/blocks/price-list.scss
@@ -17,12 +17,14 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
 }
 
 .price-list__reset-btn {
   font-family: $font-family-base;
   font-size: 14px;
+  margin-bottom: 30px;
   font-weight: $semibold;
   color: $text-color;
   border-bottom: 1px solid $text-color;
@@ -210,6 +212,7 @@
 .price-list__multiselect {
   width: 230px;
   margin-right: 30px;
+  margin-bottom: 30px;
   font-family: $font-family-base;
   font-size: 14px;
   font-weight: $semibold;
@@ -337,4 +340,72 @@
   font-weight: $medium;
   color: $text-color;
   margin: 6px 12px 0 0;
+}
+
+.price-list__result-table-wrap {
+  width: 100%;
+  overflow-x: auto;
+}
+
+.price-list__result-table-box {
+  width: 100%;
+}
+
+@include tablet-lg {
+  .price-list__multiselect:last-of-type {
+    margin-right: 30px;
+  }
+
+  .price-list__reset-btn {
+    margin-left: 0;
+  }
+
+  .price-list__company-info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .price-list__company-right-box {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  .price-list {
+    padding: 80px 0;
+  }
+}
+
+@include tablet-md {
+  .price-list__result-table-wrap {
+    margin-left: -30px;
+    width: calc(100% + 60px);
+  }
+
+  .price-list__result-table-box {
+    width: 800px;
+    padding: 0 30px;
+  }
+
+  .price-list {
+    padding: 60px 0;
+  }
+}
+
+@include tablet-sm {
+  .price-list {
+    padding: 40px 0;
+  }
+
+  .price-list__wrapper {
+    padding: 0 20px;
+  }
+
+  .price-list__result-table-wrap {
+    margin-left: -20px;
+    width: calc(100% + 40px);
+  }
+
+  .price-list__result-table-box {
+    padding: 0 20px;
+  }
 }
