fixed footer to bottom

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,6 +7,7 @@
 
 @import "./blocks/header";
 @import "./blocks/footer";
+@import "./blocks/main-wrapper";
 @import "./blocks/content";
 @import "./blocks/welcome-screen";
 @import "./blocks/swiper";
